# Rex-Omni

./: README.md  pyproject.toml
applications/_1_rexomni_sam/: README.md
applications/_2_automatic_grounding_data_engine/: README.md
evaluation/: README.md
finetuning/: README.md
